Compile warnings fixes